--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <div id="title">
-        <div class="row">
+        <div class="row ">
             <div class="col-lg-6">
                 <h1 class="title-heading intro1">IDEATE</h1>
                 <h1 class="title-heading intro1" id="intro">INNOVATE</h1>
@@ -74,17 +74,17 @@
                     their startup and assist them at every step. From assisting innovators in acquiring the skills required to make
                     their idea a reality to Intellectual Property Rights Cell, We have it all.</h3>
             </div>
-            <div class="col-lg-6 logo" >
-                <img src="image/logo.png" alt="" style="height: 100%; width: 100%; object-fit: contain">
+            <div class="col-lg-6 logo intro2">
+                <img src="image/logo.png" alt="" style="height: 100%; width: 100%; object-fit: contain;">
             </div>
         </div>
     </div>
 
 
     <div id="foo">
-        <a href="" style="color:white;"><i class="fa-brands fa-linkedin"></i></a><br>
-        <a  style="color:white;"><i class="fa-brands fa-facebook-square"></i></a><br>
-        <a href="" style="color: white;"><i class="fa-brands fa-instagram-square"></i></i></a>
+        <a href="https://www.linkedin.com/company/ignitw/" style="color:white;"><i class="fa-brands fa-linkedin"></i></a><br>
+        <a href="https://www.facebook.com/TheInnovationGarage" style="color:white;"><i class="fa-brands fa-facebook-square"></i></a><br>
+        <a href="https://www.instagram.com/ig.nitw/" style="color: white;"><i class="fa-brands fa-instagram-square"></i></i></a>
     </div>
 
     <!-- <hr> -->
@@ -98,18 +98,18 @@
               <h2 class="testimonial-heading">AI, ML, ROBOTICS, HACKING, DESIGN, ETC.
                 YOU NAME IT.
                 WE HAVE AN EVENT</h2>
-              <img src="image/in2.png"  class="testimonial-image">
+              <img src="image/in2.png"  class="testimonial-image floating">
               
             </div>
             <div class="carousel-item">
               <h2 class="testimonial-heading">WE MAKE THE FUTURE.
                 TODAY.</h2>
-              <img class="testimonial-image" src="image/in3.png" >
+              <img class="testimonial-image floating" src="image/in3.png" >
             </div>
 
             <div class="carousel-item">
                 <h2 class="testimonial-heading">WE HAVE A VAST COLLECTION OF CONTENT EXPLORE NOW</h2>
-                <img class="testimonial-image" src="image/in4.png" >
+                <img class="testimonial-image floating" src="image/in4.png" >
               </div>
           </div>
           <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
